# time-series-analysis

./: Dockerfile  docker-compose.yml  pyproject.toml
notebook/: arima.ipynb  time_series_analysis.ipynb
