[tool.poetry]
name = "time-series-analysis"
version = "0.1.0"
description = ""
authors = ["S.Ura <ura.soo3635@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
statsmodels = "^0.14.2"
yfinance = "^0.2.39"
pandas-datareader = "^0.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
